# server/service/auth.go
@@ -1,8 +1,10 @@
 package service
 
+import "fmt"
+
 type AuthService interface {
 	Login(username string, password string) (string, error)
-	Verify(token string) (bool, error)
+	Verify(token string) (int, error)
 }
 
 type authService struct {}
@@ -15,7 +17,9 @@ func (h *authService) Login(username string, password string) (string, error) {
 	return "token", nil
 }
 
-func (h *authService) Verify(token string) (bool, error) {
-	hash := "hash"
-	return hash == "hash", nil
+func (h *authService) Verify(token string) (int, error) {
+	if token == "token" {
+		return 66, nil
+	}
+	return -1, fmt.Errorf("Invliad session ID")
 }
